templates/ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: dummy
  labels:
    name: dummy
