templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-app-depl
  namespace: dummy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dummy-app
  template:
    metadata:
      labels:
        app: dummy-app
    spec:
      containers:
        - name: dummy-app
          image: busykoala/dummy_server:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 8000
          imagePullPolicy: Always
