templates/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dummy-app-svc
  namespace: dummy
spec:
  ports:
  - port: 80
    targetPort: 8000  # depl app port
    name: tcp
  selector:
    app: dummy-app
