templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-app-ingress
  namespace: dummy
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummy-app-svc
            port:
              number: 80
